# Project-Ceasar

./: .gitignore  Cargo.toml  README.md
configs/: edge-bwari-alpha.toml  edge-bwari-bravo.toml  edge-dev.toml  edge-drone-relay-01.toml  edge-pi.toml  edge-v4l2.toml  hub-dev.toml  mesh-cluster.json
crates/caesar-hub/: Cargo.toml
crates/caesar-hub/src/: config.rs  main.rs  server.rs  store.rs
crates/uriel-caesar-core/: Cargo.toml
crates/uriel-caesar-core/src/: crypto.rs  io.rs  lib.rs  protocol.rs
crates/uriel-edge-node/: Cargo.toml
crates/uriel-edge-node/src/: camera.rs  config.rs  fusion.rs  inference.rs  main.rs  sensors.rs  uplink.rs
deploy/systemd/: caesar-console.service  caesar-hub.service  caesar-orchestrator.service  uriel-edge-node.service
models/: README.md
ros2_ws/: README.md
ros2_ws/src/caesar_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/caesar_bridge/caesar_bridge/: __init__.py  bridge_node.py
ros2_ws/src/caesar_bridge/launch/: bridge.launch.py
ros2_ws/src/caesar_bridge/resource/: caesar_bridge
scripts/: bootstrap_edge_pi.sh  bootstrap_hub.sh  bootstrap_ros2_humble.sh  fetch_free_model.py  manage_keys.py  onnx_hook.py  radar_adapter.py  thermal_adapter.py
services/caesar_console/: README.md  server.py
services/caesar_console/static/: app.js  index.html  styles.css
services/mesh_orchestrator/: README.md  orchestrator.py
