<?xml version="1.0"?>
<package format="3">
  <name>caesar_bridge</name>
  <version>0.1.0</version>
  <description>Bridge Caesar hub journal records into ROS 2 topics.</description>
  <maintainer email="operator@example.com">Operator</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
